Fixed: Custom font size accessibility feature has layout spacing issues.

--- a/src/main/resources/resources/light.less
+++ b/src/main/resources/resources/light.less
@@ -799,9 +799,11 @@ legend, main #form-canvas .subform-section-title span {
     color: @fontLabelColor;
 }
 
-.activeFont {
+.activeFont,
+.buttonFontSize.activeFont {
     color: @buttonText !important;
     background-color: @button !important;
+    border-color: @button !important;
 }
 
 /* Datalist filter submit: consistent theme button color, disable waves tint */
